// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CopyObjectsForm Component Copy Class should render with copy to same path checked, namespace hidden, and Copy disabled 1`] = `
<div>
  <div
    class="dialog-provision-form"
  >
    <form>
      <div
        class="cds--form-item cds--text-input-wrapper cds--text-input-wrapper--readonly"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="from_domain"
          >
            From Domain
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="from_domain"
              name="from_domain"
              readonly=""
              type="text"
              value="Domain 1"
            />
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="domain"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            To Domain
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="domain"
              name="domain"
              title="Domain 2"
            >
              <option
                class="cds--select-option"
                label="Domain 1"
                value="1"
              >
                Domain 1
              </option>
              <option
                class="cds--select-option"
                label="Domain 2"
                value="2"
              >
                Domain 2
              </option>
              <option
                class="cds--select-option"
                label="Domain 3"
                value="3"
              >
                Domain 3
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div>
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            checked=""
            class="cds--checkbox"
            id="override_source"
            name="override_source"
            type="checkbox"
          />
          <label
            class="cds--checkbox-label"
            for="override_source"
            title=""
          >
            <div
              class="cds--checkbox-label-text"
              dir="auto"
            >
              Copy to same path
            </div>
          </label>
          <div
            class="cds--checkbox__validation-msg"
          />
        </div>
      </div>
      <div
        class="ae-selected-items-table"
      >
        <div
          class="miq-data-table miq-ae-copy-items"
        >
          <div
            class="cds--data-table-content"
          >
            <table
              class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
            >
              <thead>
                <tr>
                  <th
                    class="miq-data-table-header"
                    id="data-table-1__header-name"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Selected Items
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                aria-live="polite"
              >
                <tr
                  class=""
                  tabindex="0"
                  title=""
                >
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title="TestClass"
                      >
                        TestClass
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          />
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="is_single_item"
                name="is_single_item"
                type="text"
                value="true"
              />
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          />
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="show_override_existing"
                name="show_override_existing"
                type="text"
                value="false"
              />
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Copy
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`CopyObjectsForm Component Copy Instance should render with instance name and override existing checkbox 1`] = `
<div>
  <div
    class="dialog-provision-form"
  >
    <form>
      <div
        class="cds--form-item cds--text-input-wrapper cds--text-input-wrapper--readonly"
      >
        <div
          class="cds--text-input__label-wrapper"
        >
          <label
            class="cds--label"
            dir="auto"
            for="from_domain"
          >
            From Domain
          </label>
        </div>
        <div
          class="cds--text-input__field-outer-wrapper"
        >
          <div
            class="cds--text-input__field-wrapper"
          >
            <input
              class="cds--text-input"
              id="from_domain"
              name="from_domain"
              readonly=""
              type="text"
              value="Domain 1"
            />
            <span
              aria-atomic="true"
              aria-live="assertive"
              class="cds--text-input__counter-alert"
              role="alert"
            />
          </div>
        </div>
      </div>
      <div
        class="cds--form-item"
      >
        <div
          class="cds--select"
        >
          <label
            class="cds--label"
            dir="auto"
            for="domain"
          >
            <span
              aria-hidden="true"
              class="ddorg__carbon-component-mapper_is-required isRequired-0-2-1"
            >
              *
            </span>
            To Domain
          </label>
          <div
            class="cds--select-input__wrapper"
          >
            <select
              class="cds--select-input"
              id="domain"
              name="domain"
              title="Domain 2"
            >
              <option
                class="cds--select-option"
                label="Domain 1"
                value="1"
              >
                Domain 1
              </option>
              <option
                class="cds--select-option"
                label="Domain 2"
                value="2"
              >
                Domain 2
              </option>
            </select>
            <svg
              aria-hidden="true"
              class="cds--select__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 11 3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
              />
            </svg>
          </div>
        </div>
      </div>
      <div>
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            checked=""
            class="cds--checkbox"
            id="override_source"
            name="override_source"
            type="checkbox"
          />
          <label
            class="cds--checkbox-label"
            for="override_source"
            title=""
          >
            <div
              class="cds--checkbox-label-text"
              dir="auto"
            >
              Copy to same path
            </div>
          </label>
          <div
            class="cds--checkbox__validation-msg"
          />
        </div>
      </div>
      <div>
        <div
          class="cds--form-item cds--checkbox-wrapper"
        >
          <input
            class="cds--checkbox"
            id="override_existing"
            name="override_existing"
            type="checkbox"
          />
          <label
            class="cds--checkbox-label"
            for="override_existing"
            title=""
          >
            <div
              class="cds--checkbox-label-text"
              dir="auto"
            >
              Replace items if they already exist?
            </div>
          </label>
          <div
            class="cds--checkbox__validation-msg"
          />
        </div>
      </div>
      <div
        class="ae-selected-items-table"
      >
        <div
          class="miq-data-table miq-ae-copy-items"
        >
          <div
            class="cds--data-table-content"
          >
            <table
              class="cds--data-table cds--data-table--lg cds--data-table--visible-overflow-menu"
            >
              <thead>
                <tr>
                  <th
                    class="miq-data-table-header"
                    id="data-table-8__header-name"
                    scope="col"
                  >
                    <div
                      class="cds--table-header-label"
                    >
                      Selected Items
                      <div
                        class="cds--table-header-label--decorator-inner"
                      />
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                aria-live="polite"
              >
                <tr
                  class=""
                  tabindex="0"
                  title=""
                >
                  <td>
                    <div
                      class="cell"
                    >
                      <span
                        class="cds--front-line"
                        title="TestInstance"
                      >
                        TestInstance
                      </span>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          />
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="is_single_item"
                name="is_single_item"
                type="text"
                value="true"
              />
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        hidden=""
      >
        <div
          class="cds--form-item cds--text-input-wrapper"
        >
          <div
            class="cds--text-input__label-wrapper"
          />
          <div
            class="cds--text-input__field-outer-wrapper"
          >
            <div
              class="cds--text-input__field-wrapper"
            >
              <input
                class="cds--text-input"
                id="show_override_existing"
                name="show_override_existing"
                type="text"
                value="true"
              />
              <span
                aria-atomic="true"
                aria-live="assertive"
                class="cds--text-input__counter-alert"
                role="alert"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="custom-button-wrapper"
      >
        <button
          class="btnRight cds--btn cds--btn--primary cds--btn--disabled"
          disabled=""
          type="submit"
        >
          Copy
        </button>
        <button
          class="btnRight cds--btn cds--btn--secondary cds--btn--disabled"
          disabled=""
          type="button"
        >
          Reset
        </button>
        <button
          class="cds--btn cds--btn--secondary"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
